Add images and title page

--- a/index.html
+++ b/index.html
@@ -3,19 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Album Tunnel</title>
+    <title>FCP4</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="viewport">
     <div class="scene" id="scene">
-      <div class="album"><img src="https://picsum.photos/400/400?1"></div>
-      <div class="album"><img src="https://picsum.photos/400/400?2"></div>
-      <div class="album"><img src="https://picsum.photos/400/400?3"></div>
-      <div class="album"><img src="https://picsum.photos/400/400?4"></div>
-      <div class="album"><img src="https://picsum.photos/400/400?5"></div>
-      <div class="album"><img src="https://picsum.photos/400/400?6"></div>
+      <div class="album"><img src="FCP3.png"></div>
+      <div class="album"><img src="intothedark.png"></div>
+      <div class="album"><img src="!.png"></div>
+      <div class="album"><img src="FCP2.png"></div>
+      <div class="album"><img src="vendredi13juin.png"></div>
+      <div class="album"><img src="guapman.png"></div>
     </div>
+  <div class="main-page" id="main-page">
+<link href="https://fonts.googleapis.com/css?family=Raleway:300,500,700,900" rel="stylesheet">
+
+
+
+<h1>
+Freestyle Covid partie 4  
+  <span class="drop"></span>
+  <span class="drop"></span>
+  <span class="drop"></span>
+  <span class="drop"></span>
+  <span class="drop"></span>
+</h1>  </div>
   </div>
     <script src="script.js"></script>
 </body>
