Add generative canvas

--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
 
         <div class="red-square-container">
           <canvas id="redCanvas" class="red-canvas"></canvas>
-          <img src="6663c6dc57f236d92aa223cc224488b8.png" alt="Silhouette" class="silhouette-img" />
+          <img
+            src="6663c6dc57f236d92aa223cc224488b8.png"
+            alt="Silhouette"
+            class="silhouette-img"
+          />
         </div>
 
         <div class="style-buttons">
