--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
@@ -47,10 +47,28 @@
         </div>
 
         <div class="style-buttons">
-          <button class="style-btn active" data-style="1">Cover 1</button>
-          <button class="style-btn" data-style="2">Cover 2</button>
-          <button class="style-btn" data-style="3">Cover 3</button>
-          <button class="style-btn" data-style="4">Cover 4</button>
+          <button class="style-btn active" data-style="1">L'élu</button>
+          <button class="style-btn" data-style="2">Nouvel ordre</button>
+          <button class="style-btn" data-style="3">Hypno</button>
+          <button class="style-btn" data-style="4">Nuit orageuse</button>
+        </div>
+
+        <div class="color-buttons">
+          <button
+            class="color-btn active"
+            data-color="red"
+            style="background-color: #ff0000"
+          ></button>
+          <button
+            class="color-btn"
+            data-color="orange"
+            style="background-color: #ff6600"
+          ></button>
+          <button
+            class="color-btn"
+            data-color="white"
+            style="background-color: #ffffff"
+          ></button>
         </div>
       </div>
     </div>
