Add landing video

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     />
   </head>
   <body>
+    <section class="hero">
+      <video class="hero-video" autoplay muted loop playsinline>
+        <source src="video/menace.mp4" type="video/mp4" />
+      </video>
+      <div class="hero-overlay"></div>
+      <div class="hero-content">
+        <h2 class="hero-title">Menace Santana</h2>
+      </div>
+    </section>
     <div class="viewport">
       <div class="scene" id="scene">
         <div class="album"><img src="FCP3.png" /></div>
