--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       </video>
       <div class="hero-overlay"></div>
       <div class="hero-content">
-        <h2 class="hero-title">Menace Santana</h2>
+        <h2>Menace Santana</h2>
+        <h3>Nouvel Album</h3>
+        <h4>13/06/2026</h4>
       </div>
     </section>
     <div class="viewport">
@@ -38,7 +40,7 @@
         />
 
         <h1>
-          Freestyle Covid partie 4
+          Freestyle covid partie 4
           <span class="drop"></span>
           <span class="drop"></span>
           <span class="drop"></span>
